--- a/quinzena3/sistema-loja/funcionarios.html
+++ b/quinzena3/sistema-loja/funcionarios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styss.css">
     <title>Funcionários</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
+        <a href="pagina-venda.html">Pedidos</a>
     </div>
 
     <h2>Funcionários</h2>
