--- a/quinzena3/sistema-loja/index.html
+++ b/quinzena3/sistema-loja/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
+    <title>Mineirinho Lanches</title>
 </head>
 <body>
-    
+    <div class="inicio">
+        <h1>Bem-vind@ ao <em>Mineirinho Lanches</em>!</h1>
+        <p class="frase">Lanches variados, gostosos e caseiros.</p>
+        
+    </div>
+<br>
+    <div>
+        <a href="index.html">Página Inicial</a>
+        <a href="ctrl-estoque.html">Controle de Estoque</a>
+        <a href="add-produto.html">Adicionar Produto</a>
+        <a href="funcionarios.html">Funcionários</a>
+        <a href="pagina-venda.html">Pedidos</a>
+        <a href="historico-venda.html">Historico de pedidos</a>
+
+    <div class="informacao">
+        <br>
+        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+        <u>Temos pastel de vários sabores salgados e doces, panquecas de molho branco, molho vermelho e os dois juntos, salgados variados e sucos.</u>
+    </div>
+
+    <div>
+        <p>Siga-nos nas redes sociais!</p>
+
+        <div>
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png">
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png">
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png">
+        </div>
+    </div>
 </body>
 </html>
